syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.regions.data.input";

import "properties/support.proto";
import "regions/support.proto";


message RegionsPluginDataInput {
    repeated RegionIdInput regionIds = 1;
    repeated PropertyDefinitionMapInput regionPropertyDefinitions = 2;
    repeated RegionPropertyValueMapInput regionPropertyValues = 3;
    repeated RegionMembershipInput personRegions = 4;
    bool trackRegionArrivalTimes = 5;
}
